--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ google_analytics: UA-649986-29
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://iwillcreatethenewfacebook.github.io
+url: http://gitcompanion.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
