--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Fotis Alexandrou Git Training
+name: Git Training
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Greece
+description: by Fotis Alexandrou @falexandrou - Web Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/301123?v=3&s=460
